--- a/menu/src/main/AndroidManifest.xml
+++ b/menu/src/main/AndroidManifest.xml
@@ -12,19 +12,34 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.READ_LOGS" />
 
+
+    <!--<uses-permission android:name="android.permission.READ_CONTACTS" />-->
+    <!--<uses-permission android:name="android.permission.READ_PHONE_STATE" />-->
+    <!--<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />-->
+    <!--<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />-->
+    <!--<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />-->
+    <!--<uses-permission android:name="android.permission.INTERNET" />-->
+    <!--<uses-permission android:name="android.permission.RECEIVE_SMS" />-->
+    <!--<uses-permission android:name="android.permission.READ_SMS" />-->
+    <!--<uses-permission android:name="android.permission.GET_TASKS" />-->
+    <!--<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />-->
+
+
     <application
         android:name="com.feasttime.MenuApplication"
-
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <!--短信验证码-->
+        <meta-data android:name="Mob-AppKey" android:value="c86a24bae7d2"/>
+        <meta-data android:name="Mob-AppSecret" android:value="8f972e6dda3098b8fc3ac38f9304fe6c"/>
+        <!--短信验证码-->
+
         <activity android:name="com.feasttime.view.SplashActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
         </activity>
         <activity android:name="com.feasttime.view.MainActivity">
         </activity>
@@ -35,12 +50,19 @@
         <activity android:name="com.feasttime.view.ShowWebActivity"></activity>
 
         <activity android:name="com.feasttime.view.PlayVideoActivity" android:theme="@style/DialogTransparent" ></activity>
-        <activity android:name="com.feasttime.view.LoginActivity"></activity>
+        <activity android:name="com.feasttime.view.LoginActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <activity android:name="com.feasttime.view.WaitingTimeActivity">
 
         </activity>
         <activity android:name="com.feasttime.view.SilentADActivity"></activity>
+
+
 
     </application>
 
