--- a/menu/src/main/AndroidManifest.xml
+++ b/menu/src/main/AndroidManifest.xml
@@ -58,11 +58,9 @@
         </activity>
 
         <activity android:name="com.feasttime.view.WaitingTimeActivity">
-
-
         </activity>
         <activity android:name="com.feasttime.view.SilentADActivity"></activity>
-
+        <activity android:name="com.feasttime.view.TestActivity"></activity>
 
 
     </application>
