修改购物车页面ui

--- a/menu/src/main/AndroidManifest.xml
+++ b/menu/src/main/AndroidManifest.xml
@@ -50,6 +50,9 @@
         <activity android:name="com.feasttime.view.EndActivity">
         </activity>
 
+        <activity android:name="com.feasttime.view.ShoppingCartActivity">
+        </activity>
+
         <activity android:name="com.feasttime.view.ShowWebActivity"></activity>
 
         <activity android:name="com.feasttime.view.PlayVideoActivity" android:theme="@style/DialogTransparent" ></activity>
