--- a/menu/src/main/AndroidManifest.xml
+++ b/menu/src/main/AndroidManifest.xml
@@ -63,6 +63,7 @@
         <activity android:name="com.feasttime.view.WaitingTimeActivity">
         </activity>
         <activity android:name="com.feasttime.view.SilentADActivity"></activity>
+        <activity android:name="com.feasttime.view.PaymentActivity"></activity>
         <activity android:name="com.feasttime.view.TestActivity"></activity>
 
 
