增加获取菜品接口

--- a/menu/build.gradle
+++ b/menu/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     compile project(':android_display_sdk')
     compile 'com.danikula:videocache:2.7.0' //视频缓存框架
     compile name:'SMSSDK-2.1.4', ext: 'aar'
+    compile 'q.rorbin:badgeview:1.1.2'
 
     compile 'com.pnikosis:materialish-progress:1.7'
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.7'
