--- a/menu/src/main/AndroidManifest.xml
+++ b/menu/src/main/AndroidManifest.xml
@@ -64,6 +64,7 @@
         </activity>
         <activity android:name="com.feasttime.view.SilentADActivity"></activity>
         <activity android:name="com.feasttime.view.PaymentActivity"></activity>
+        <activity android:name="com.feasttime.view.PaymentSuccessActivity"></activity>
         <activity android:name="com.feasttime.view.TestActivity"></activity>
 
 
