增加评论页面

--- a/dishmap/src/main/AndroidManifest.xml
+++ b/dishmap/src/main/AndroidManifest.xml
@@ -62,12 +62,15 @@
         <activity android:name=".StoreDetailActivity">
 
         </activity>
-        <activity android:name=".SplashActivity" >
+        <activity android:name=".CommentActivity"
+               android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".SplashActivity" >
+
         </activity>
 
         <activity
