--- a/dishmap/build.gradle
+++ b/dishmap/build.gradle
@@ -58,10 +58,20 @@ dependencies {
 
     compile(name: 'ijkplayer-java-release', ext: 'aar') /**编译ijkplayer-java-release.aar文件*/
 
-
+     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'io.reactivex.rxjava2:rxjava:2.0.0-RC1'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.0-RC1'
+    compile 'com.squareup.okhttp3:okhttp:3.6.0'
+    compile 'com.alibaba:fastjson:1.1.56.android'
+    // retrofit
+    compile 'com.squareup.retrofit2:retrofit:2.2.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.2.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
 
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.alibaba:fastjson:1.1.56.android'
     testCompile 'junit:junit:4.12'
+
+
 }
