--- a/dishmap/src/main/AndroidManifest.xml
+++ b/dishmap/src/main/AndroidManifest.xml
@@ -77,6 +77,9 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".activity.RegisterActivity" >
+        </activity>
+
         <activity
             android:name="com.mob.tools.MobUIShell"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
