--- a/dishmap/build.gradle
+++ b/dishmap/build.gradle
@@ -1,16 +1,16 @@
 apply plugin: 'com.android.application'
 
 
-//buildscript {
-//    repositories {
+buildscript {
+    repositories {
         //jcenter()
-//         maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
-//    }
+         maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+    }
 
-//    dependencies {
-//        classpath "com.android.tools.build:gradle:2.3.3"
-//    }
-//}
+    dependencies {
+        classpath "com.android.tools.build:gradle:2.3.3"
+    }
+}
 
 android {
     compileSdkVersion 25
@@ -80,4 +80,7 @@ dependencies {
     compile 'pub.devrel:easypermissions:0.1.9'
     compile 'io.apisense:rhino-android:1.0'
     testCompile 'junit:junit:4.12'
+
+
+    compile 'com.dhh:websocket2:1.3.0'
 }
