--- a/dishmap/src/main/AndroidManifest.xml
+++ b/dishmap/src/main/AndroidManifest.xml
@@ -71,13 +71,17 @@
         </activity>
 
         <activity android:name=".activity.LoginActivity" >
+
+        </activity>
+
+        <activity android:name=".activity.RegisterActivity" >
+        </activity>
+
+        <activity android:name=".activity.TestActivtiy">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <activity android:name=".activity.RegisterActivity" >
         </activity>
 
         <activity
