--- a/dishmap/src/main/AndroidManifest.xml
+++ b/dishmap/src/main/AndroidManifest.xml
@@ -77,6 +77,9 @@
         <activity android:name=".activity.RegisterActivity" >
         </activity>
 
+        <activity android:name=".activity.ChatActivity" >
+        </activity>
+
         <activity android:name=".activity.TestActivtiy">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
