--- a/dishmap/build.gradle
+++ b/dishmap/build.gradle
@@ -4,8 +4,8 @@ apply plugin: 'com.android.application'
 buildscript {
     repositories {
         //jcenter()
-        maven { url "https://jitpack.io"}
-         maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+        maven { url "https://jitpack.io" }
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
     }
 
     dependencies {
@@ -44,8 +44,8 @@ android {
 
 repositories {
     mavenCentral()
-    maven { url "https://jitpack.io"}
-    maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+    maven { url "https://jitpack.io" }
+    maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
     flatDir {
         dirs 'libs' /**在libs文件夹下找aar文件*/
     }
@@ -62,33 +62,36 @@ dependencies {
 
     compile(name: 'ijkplayer-java-release', ext: 'aar') /**编译ijkplayer-java-release.aar文件*/
 
-     compile 'com.squareup.picasso:picasso:2.5.2'
+    // retrofit
+    
+
+    compile(name: 'ijkplayer-java-release', ext: 'aar')
+    /** 编译ijkplayer-java-release.aar文件 */
+    compile(name: 'ijkplayer-java-release', ext: 'aar')
+    /** 编译ijkplayer-java-release.aar文件 */
+    compile 'com.alibaba:fastjson:1.1.56.android'
+
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'io.reactivex.rxjava2:rxjava:2.0.0-RC1'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.0-RC1'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.alibaba:fastjson:1.1.56.android'
-    // retrofit
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
-
-    compile(name: 'ijkplayer-java-release', ext: 'aar')
-    /** 编译ijkplayer-java-release.aar文件 */
-    compile(name: 'ijkplayer-java-release', ext: 'aar')
-    /** 编译ijkplayer-java-release.aar文件 */
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.alibaba:fastjson:1.1.56.android'
     compile 'pub.devrel:easypermissions:0.1.9'
     compile 'io.apisense:rhino-android:1.0'
-    testCompile 'junit:junit:4.12'
-
-    compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.bartoszlipinski:recyclerviewheader2:2.0.1'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:v2.6.1'
     //    扫码
-    compile 'com.google.zxing:core:3.3.0'
+    compile 'com.google.zxing:core:3.2.1'
+    compile 'cn.bingoogolapple:bga-qrcodecore:1.1.7@aar'
+    compile 'cn.bingoogolapple:bga-zxing:1.1.7@aar'
+    compile 'cn.bingoogolapple:bga-zbar:1.1.7@aar'
 
     // web socket 通讯
     compile 'com.dhh:websocket2:1.3.0'
+    testCompile 'junit:junit:4.12'
 }
