--- a/dishmap/src/main/AndroidManifest.xml
+++ b/dishmap/src/main/AndroidManifest.xml
@@ -56,9 +56,11 @@
         <meta-data android:name="Mob-AppSecret" android:value="b89d2427a3bc7ad1aea1e1e8c1d36bf3"/>
 
         <activity android:name=".activity.MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-
-
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         <service
@@ -146,6 +148,9 @@
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data android:scheme="line.1477692153" />
             </intent-filter>
+        </activity>
+        <activity android:name=".activity.ScanActivity">
+
         </activity>
 
     </application>
