--- a/dishmap/build.gradle
+++ b/dishmap/build.gradle
@@ -74,6 +74,8 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'io.reactivex.rxjava2:rxjava:2.0.0-RC1'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.0-RC1'
+    compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
+
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.alibaba:fastjson:1.1.56.android'
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
