修改老板放桌逻辑

--- a/dishmap/src/main/AndroidManifest.xml
+++ b/dishmap/src/main/AndroidManifest.xml
@@ -75,10 +75,7 @@
         </activity>
         <activity android:name=".activity.SplashActivity" >
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
 
         </activity>
 
@@ -93,6 +90,13 @@
         </activity>
 
         <activity android:name=".activity.MerchantActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".activity.BossPlaceTableActivity" >
         </activity>
 
         <service android:name=".service.MyService"></service>
