--- a/dishmap/build.gradle
+++ b/dishmap/build.gradle
@@ -92,4 +92,7 @@ dependencies {
     // web socket 通讯
     compile 'com.dhh:websocket2:1.3.0'
     testCompile 'junit:junit:4.12'
+
+    //微信
+    compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:1.1.6'
 }
