--- a/dishmap/src/main/AndroidManifest.xml
+++ b/dishmap/src/main/AndroidManifest.xml
@@ -88,12 +88,16 @@
         <activity android:name=".activity.RegisterActivity" >
         </activity>
 
-        <activity android:name=".activity.ChatActivity"
-            android:windowSoftInputMode="adjustResize">
+        <activity android:name=".activity.ScanSuccessActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".activity.ChatActivity"
+            android:windowSoftInputMode="adjustResize">
+
         </activity>
 
         <activity android:name=".activity.MerchantActivity" >
