--- a/dishmap/src/main/AndroidManifest.xml
+++ b/dishmap/src/main/AndroidManifest.xml
@@ -108,6 +108,10 @@
         </activity>
 
         <activity android:name=".activity.PaySuccessActivity">
+
+        </activity>
+
+        <activity android:name=".activity.PayActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
