--- a/dishmap/src/main/AndroidManifest.xml
+++ b/dishmap/src/main/AndroidManifest.xml
@@ -112,6 +112,10 @@
         </activity>
 
         <activity android:name=".activity.PayActivity">
+
+        </activity>
+
+        <activity android:name=".activity.SetUserInfoActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
