增加去过的店

--- a/dishmap/src/main/AndroidManifest.xml
+++ b/dishmap/src/main/AndroidManifest.xml
@@ -116,14 +116,17 @@
         </activity>
 
         <activity android:name=".activity.SetUserInfoActivity">
+
+        </activity>
+
+        <activity android:name=".activity.FeedBackActivity" >
+        </activity>
+
+        <activity android:name=".activity.HadEatedStoreActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <activity android:name=".activity.FeedBackActivity" >
-
         </activity>
 
         <activity android:name="com.feasttime.dishmap.wxapi.WXEntryActivity"
