增加消息页面

--- a/dishmap/src/main/AndroidManifest.xml
+++ b/dishmap/src/main/AndroidManifest.xml
@@ -79,11 +79,6 @@
             android:theme="@style/WelcomeStyle"
             android:name=".activity.SplashActivity" >
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
         </activity>
 
         <activity android:name=".activity.LoginActivity" >
@@ -130,6 +125,13 @@
 
         <activity android:name=".activity.HadEatedStoreActivity">
 
+        </activity>
+
+        <activity android:name=".activity.MessageActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         <activity android:name="com.feasttime.dishmap.wxapi.WXEntryActivity"
