--- a/dishmap/src/main/AndroidManifest.xml
+++ b/dishmap/src/main/AndroidManifest.xml
@@ -128,6 +128,10 @@
         </activity>
 
         <activity android:name=".activity.MessageActivity">
+
+        </activity>
+
+        <activity android:name=".activity.AboutActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
