增加我的桌位详情

--- a/dishmap/src/main/AndroidManifest.xml
+++ b/dishmap/src/main/AndroidManifest.xml
@@ -133,6 +133,10 @@
 
         </activity>
 
+        <activity android:name=".activity.MySeatDetailActivity">
+
+        </activity>
+
         <activity android:name=".activity.MessageActivity">
 
         </activity>
