--- a/dishmap/build.gradle
+++ b/dishmap/build.gradle
@@ -68,7 +68,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile files('libs/BaiduLBS_Android.jar')
+    //compile files('libs/BaiduLBS_Android.jar')
     compile(name: 'ijkplayer-java-release', ext: 'aar')
     /**编译ijkplayer-java-release.aar文件*/
     // retrofit
