--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,12 @@ buildscript {
     repositories {
 //        jcenter()
         maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+        maven{ url "http://mvn.mob.com/android" }
     }
     dependencies {
 //        classpath 'com.android.tools.build:gradle:3.0.0'
         classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath "com.mob.sdk:MobSDK:+"
 
 
         // NOTE: Do not place your application dependencies here; they belong
