--- a/dishmap/build.gradle
+++ b/dishmap/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.mob.sdk'
+
 
 
 buildscript {
@@ -11,6 +13,13 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:2.3.3"
     }
+}
+
+MobSDK {
+    appKey "moba6b6c6d6"
+    appSecret "b89d2427a3bc7ad1aea1e1e8c1d36bf3"
+
+    SMSSDK {}
 }
 
 android {
