--- a/dishmap/src/main/AndroidManifest.xml
+++ b/dishmap/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.feasttime.dishmap">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -42,6 +43,7 @@
 
     <application
         android:name=".application.MyApplication"
+        tools:replace="android:name"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -54,9 +56,12 @@
         <meta-data
             android:name="Mob-AppKey"
             android:value="moba6b6c6d6" />
+
         <meta-data
             android:name="Mob-AppSecret"
             android:value="b89d2427a3bc7ad1aea1e1e8c1d36bf3" />
+
+
 
         <activity android:name=".activity.MainActivity">
 
