--- a/dishmap/src/main/AndroidManifest.xml
+++ b/dishmap/src/main/AndroidManifest.xml
@@ -150,6 +150,7 @@
         <activity
             android:name="com.feasttime.dishmap.wxapi.WXEntryActivity"
             android:exported="true"
+            android:launchMode="singleTop"
             android:theme="@android:style/Theme.Translucent">
 
         </activity>
