--- a/dishmap/build.gradle
+++ b/dishmap/build.gradle
@@ -89,11 +89,7 @@ dependencies {
     compile 'com.bartoszlipinski:recyclerviewheader2:2.0.1'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:v2.6.1'
     //    扫码
-    compile 'com.google.zxing:core:3.3.0'
-    compile 'cn.bingoogolapple:bga-qrcodecore:1.1.9@aar'
-    compile 'cn.bingoogolapple:bga-zxing:1.1.9@aar'
-    compile 'cn.bingoogolapple:bga-zbar:1.1.9@aar'
-
+    compile 'com.mylhyl:zxingscanner:2.1.0'
 
     // web socket 通讯
     compile 'com.dhh:websocket2:1.3.0'
