--- a/dishmap/src/main/AndroidManifest.xml
+++ b/dishmap/src/main/AndroidManifest.xml
@@ -165,6 +165,10 @@
 
         </activity>
 
+        <activity android:name=".activity.CouponDetailActivity">
+
+        </activity>
+
 
         <activity
             android:name="com.mob.tools.MobUIShell"
