--- a/dishmap/src/main/AndroidManifest.xml
+++ b/dishmap/src/main/AndroidManifest.xml
@@ -62,6 +62,23 @@
             android:value="e317f3b590f787d7c59b221f7e47ea01" />
 
 
+        <!-- imlib config begin -->
+        <service
+            android:name="io.rong.imlib.ipc.RongService"
+            android:exported="true"
+            android:process=":ipc" />
+
+        <service android:name="io.rong.imlib.ReConnectService"
+            android:exported="true"/>
+
+        <receiver android:name="io.rong.imlib.ConnectChangeReceiver"
+            android:exported="true"/>
+
+        <receiver
+            android:name="io.rong.imlib.HeartbeatReceiver"
+            android:process=":ipc" />
+        <!-- imlib config end -->
+
 
         <activity android:name=".activity.MainActivity">
 
@@ -83,10 +100,7 @@
             android:name=".activity.SplashActivity"
             android:theme="@style/WelcomeStyle">
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
 
         </activity>
 
@@ -158,7 +172,10 @@
         <service android:name=".service.MyService"></service>
 
         <activity android:name=".activity.TestActivtiy">
-
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         <activity android:name=".activity.ExpireCouponActivity">
