--- a/dishmap/build.gradle
+++ b/dishmap/build.gradle
@@ -26,8 +26,8 @@ android {
         applicationId "com.feasttime.dishmap"
         minSdkVersion 18
         targetSdkVersion 25
-        versionCode 2
-        versionName "0.2.0"
+        versionCode 3
+        versionName "0.3.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -81,7 +81,6 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxjava:2.0.0-RC1'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.0-RC1'
     compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
-
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.alibaba:fastjson:1.1.56.android'
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
@@ -94,14 +93,12 @@ dependencies {
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:v2.6.1'
     //    扫码
     compile 'com.mylhyl:zxingscanner:2.1.0'
-
     // web socket 通讯
     compile 'com.dhh:websocket2:1.5.0'
     testCompile 'junit:junit:4.12'
-
     //微信
     compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:1.1.6'
-
     // 徽标
     compile 'com.github.nekocode:Badge:2.0'
+    compile project(':IMLib')
 }
