--- a/dishmap/build.gradle
+++ b/dishmap/build.gradle
@@ -99,5 +99,6 @@ dependencies {
     compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:1.1.6'
     // 徽标
     compile 'com.github.nekocode:Badge:2.0'
+    //融云lib工程
     compile project(':IMLib')
 }
