--- a/dishmap/src/main/AndroidManifest.xml
+++ b/dishmap/src/main/AndroidManifest.xml
@@ -183,9 +183,10 @@
         </activity>
 
         <activity android:name=".activity.CouponDetailActivity">
-
         </activity>
 
+        <activity android:name=".activity.ConversationsListActivity">
+        </activity>
 
         <activity
             android:name="com.mob.tools.MobUIShell"
