49 [Bug] 优先吃用户版，登录账号，点击我的页面中的设置按钮，自动弹出语言输入栏；

--- a/dishmap/src/main/AndroidManifest.xml
+++ b/dishmap/src/main/AndroidManifest.xml
@@ -142,7 +142,8 @@
 
         </activity>
 
-        <activity android:name=".activity.SetUserInfoActivity">
+        <activity android:name=".activity.SetUserInfoActivity"
+            android:windowSoftInputMode="stateAlwaysHidden">
 
         </activity>
 
