增加微信登录页面

--- a/dishmap/src/main/AndroidManifest.xml
+++ b/dishmap/src/main/AndroidManifest.xml
@@ -186,6 +186,10 @@
         <activity android:name=".activity.CouponDetailActivity">
         </activity>
 
+        <activity android:name=".activity.WeChatLoginActivity"></activity>
+
+        <activity android:name=".activity.UserAgreementActivity"></activity>
+
         <activity
             android:name="com.mob.tools.MobUIShell"
             android:configChanges="keyboardHidden|orientation|screenSize"
