--- a/IMLib/AndroidManifest.xml
+++ b/IMLib/AndroidManifest.xml
@@ -23,7 +23,7 @@
         <!-- imlib config begin -->
         <meta-data
             android:name="RONG_CLOUD_APP_KEY"
-            android:value="n19jmcy59f1q9" />
+            android:value="" />
 
         <service
             android:name="io.rong.imlib.ipc.RongService"
