--- a/dishmap/src/main/AndroidManifest.xml
+++ b/dishmap/src/main/AndroidManifest.xml
@@ -252,6 +252,10 @@
 
         </activity>
 
+        <activity android:name=".activity.UpdateMobileNOActivity">
+
+        </activity>
+
     </application>
 
 </manifest>
